[gd_scene load_steps=3 format=2]

[ext_resource path="res://Demo.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]

[node name="Demo" type="Node2D"]
script = ExtResource( 1 )

[node name="TransitionCamera" type="Camera2D" parent="."]
current = true

[node name="CameraTween" type="Tween" parent="."]

[node name="Player1" parent="." instance=ExtResource( 2 )]
position = Vector2( 185, 190 )

[node name="Player2" parent="." instance=ExtResource( 2 )]
position = Vector2( 369, 306 )

[node name="Player3" parent="." instance=ExtResource( 2 )]
position = Vector2( 361, 118 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Helptext" type="Label" parent="CanvasLayer"]
margin_left = 12.0
margin_top = 13.0
margin_right = 413.0
margin_bottom = 27.0
text = "Press 1, 2 or 3 to switch between players. Use cursor to move."
__meta__ = {
"_edit_use_anchors_": false
}
